--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,12 @@ canvas {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 20%;
     margin-top: 5rem;
 
 }
 
 a {
+    font-family: 'helvetica'
     color: white;
     font-size: 1.5rem;
     border-radius: 30px;
