--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ canvas {
 }
 
 a {
-    font-family: 'helvetica'
+    font-family: 'helvetica';
     color: white;
     font-size: 1.5rem;
     border-radius: 30px;
